# hpc17

./: CMakeLists.txt  README.md
benchmarks/openmpi/binom/: .Rhistory
benchmarks/openmpi/divide_conquer/: .Rhistory
benchmarks/openmpi/root=2/binom/: .Rhistory
benchmarks/openmpi/root=2/divide_conquer/: .Rhistory
contrib/collectives/: gather_scatter_implem.c  gather_scatter_implem.h  gather_scatter_wrapper.c
contrib/test/: CMakeLists.txt  verify_coll_implem.c
contrib/test/test_helpers/: buffer_handling.c  buffer_handling.h  mpi_colls_check.c  mpi_colls_check.h  test_utils.c  test_utils.h
doc/: main.tex  template.tex  titlepage.tex
scripts/: create_plots_gather.R  create_plots_scatter.R  example_job.sh  example_job_gather.sh  example_job_mvapich.sh  input_gather.txt  input_scatter.txt  job_mpich_gather_31.sh  job_mpich_gather_32.sh  job_mpich_scatter_31.sh  job_mpich_scatter_32.sh  job_openmpi_gather_31.sh  job_openmpi_gather_32.sh  job_openmpi_scatter_31.sh  job_openmpi_scatter_32.sh
src/: version.h
src/collective_ops/: collectives.c  collectives.h
src/reprompi_bench/benchmark_lib/: libreproMPIbench.dylib
src/reprompi_bench/sync/joneskoenig_sync/: jk_sync.h
